SUBDIRS =			\
	ietf

EXTRA_DIST =			\
	README			\
	active-directory	\
	autoconfig		\
	debug			\
	delegates		\
	forms			\
	forms-based-auth	\
	freebusy		\
	http			\
	icalendar		\
	mail			\
	mapi-properties		\
	non-ipm-subtree		\
	openldap-ntlm.diff	\
	ntlm			\
	security		\
	sending-mail		\
	subscriptions		\
	voting