SUBDIRS =			\
	ietf			\
	reference

EXTRA_DIST =			\
	README			\
	active-directory	\
	autoconfig		\
	debug			\
	delegates		\
	entryids		\
	favorites		\
	forms			\
	forms-based-auth	\
	freebusy		\
	http			\
	icalendar		\
	mail			\
	mapi-properties		\
	non-ipm-subtree		\
	ntlm			\
	openldap-ntlm.diff	\
	rules			\
	security		\
	sending-mail		\
	subscriptions		\
	voting